# Whale-of-Fortune-v0

./: .gitignore  .todo  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SemVec.txt  errors.txt  tarpaulin-report.html  test.txt  v1-0-1-changes.txt  v1-1-1-changes.txt
artifacts/: checksums.txt  checksums_intermediate.txt  whale_of_fortune.wasm  whale_of_fortune_4.wasm
schema/: whale-of-fortune.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_game.json
src/: contract.rs  error.rs  helpers.rs  integrationtests.rs  lib.rs  msg.rs  state.rs  tests.rs
