[package]
name = "whale-of-fortune"
version = "0.1.0"
authors = ["Slexs <73056136+slexs@users.noreply.github.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.release.package.cw20-atomic-swap]
codegen-units = 1
incremental = false

[profile.release.package.cw20-bonding]
codegen-units = 1
incremental = false

[profile.release.package.cw20-escrow]
codegen-units = 1
incremental = false

[profile.release.package.cw20-merkle-airdrop]
codegen-units = 1
incremental = false

[profile.release.package.cw20-staking]
codegen-units = 1
incremental = false

[profile.release.package.cw20-streams]
codegen-units = 1
incremental = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"
entropy_beacon_cosmos = "2.0.4"
kujira = "0.7.25"

schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
digest = { version = "0.10.6", features = ["std"] }
num-bigint = "0.4.3"
num-traits = "0.2.14"
sha2 = "0.10.0"
cw20 = "1.0.1"
cw20-base = "1.0.1"
wasm = "0.0.0"


[dev-dependencies]
cw-multi-test = "0.16.2"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
cosmwasm-simulate = "0.13.6"

[alias]
wasm = "build --target wasm32-unknown-unknown --release --lib"
wasm-debug = "build --target wasm32-unknown-unknown --lib"
schema = "run schema"

